--- a/style/reservations.css
+++ b/style/reservations.css
@@ -1,17 +1,53 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
+    display: flex;
+    height: 100vh;
+}
+.main-content{
+width: 80%;
+padding: 20px;
+}
+.sidebar {
+    background-color: #2c3e50;
+    color: white;
+    width: 250px;
+    padding: 20px;
+}
+
+.sidebar-title {
+    text-align: center;
+}
+
+.sidebar-list {
+    list-style: none;
     padding: 0;
-    background-color: #f8f9fa;
+}
+
+.sidebar-item {
+    margin: 15px 0;
+}
+
+.sidebar-link {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    display: block;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+.sidebar-link:hover,
+.sidebar-link.active {
+    background: #1abc9c;
+    color: #2c3e50;
 }
 
 .container {
-    width: 90%;
-    margin: 20px auto;
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    display: flex;
+    width: 100%;
+    height: 100vh;
 }
 
 .header {
@@ -58,8 +94,8 @@ form {
 }
 
 button {
-    background-color: #28a745;
-    color: #ffffff;
+    background-color: #1abc9c;
+    color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
@@ -131,4 +167,20 @@ tbody tr:hover {
 
 .delete-button:hover {
     background-color: #c82333;
+}
+.btn-delete {
+    background-color: #e74c3c;
+    color: white;
+    text-decoration: none;
+    border-radius: 8px;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.btn-delete:hover {
+    background-color: #c0392b;
 }
